@@ -1,6 +1,5 @@
 package at.ac.tuwien.sepm.groupphase.backend.datagenerator;
 
-import at.ac.tuwien.sepm.groupphase.backend.entity.ApplicationUser;
 import at.ac.tuwien.sepm.groupphase.backend.entity.Artist;
 import at.ac.tuwien.sepm.groupphase.backend.entity.Artwork;
 import at.ac.tuwien.sepm.groupphase.backend.entity.Tag;
@@ -12,6 +11,8 @@ import at.ac.tuwien.sepm.groupphase.backend.utils.FileType;
 import at.ac.tuwien.sepm.groupphase.backend.utils.ImageDataPaths;
 import at.ac.tuwien.sepm.groupphase.backend.utils.UserRole;
 import com.github.javafaker.Faker;
+import lombok.extern.slf4j.Slf4j;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Profile;
@@ -24,8 +25,6 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.invoke.MethodHandles;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -38,10 +37,10 @@ import java.util.stream.Stream;
 
 @Profile("generateData")
 @Component
+@Slf4j
 public class UserDataGenerator {
-    private static final Logger LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
     private static final int NUMBER_OF_USERS_TO_GENERATE = 20;
-    private static final int NUMBER_OF_PROFILES_TO_GENERATE = 20;
+    private static final int NUMBER_OF_PROFILES_TO_GENERATE = 40;
     private static final int NUMBER_OF_TAGS_TO_GENERATE = 30;
 
 
@@ -50,15 +49,14 @@ public class UserDataGenerator {
     private final ArtworkRepository artworkRepo;
     private final TagRepository tagRepository;
 
-    private final ArtistRepository artistRepo;
-
-    public UserDataGenerator(ArtistRepository artistRepository, PasswordEncoder passwordEncoder, ArtworkRepository artworkRepo, TagRepository tagRepository, ArtistRepository artistRepo) {
+    public UserDataGenerator(ArtistRepository artistRepository, PasswordEncoder passwordEncoder, ArtworkRepository artworkRepo,
+                             TagRepository tagRepository) {
 
         this.artistRepository = artistRepository;
         this.passwordEncoder = passwordEncoder;
         this.artworkRepo = artworkRepo;
         this.tagRepository = tagRepository;
-        this.artistRepo = artistRepo;
+
     }
 
     @PostConstruct
@@ -86,42 +84,44 @@ public class UserDataGenerator {
     //make sure db is empty before running to avoid Unique key constraint issues
     private void loadProfiles(int numberOfProfiles) {
         List<Tag> tags = tagRepository.findAll();
-
+        log.info(ImageDataPaths.assetAbsoluteLocation + ImageDataPaths.artistProfileLocation);
         try (Stream<Path> walk = Files.walk(Paths.get(ImageDataPaths.assetAbsoluteLocation + ImageDataPaths.artistProfileLocation), 1)) {
 
-            List<String> result = walk.filter(Files::isDirectory).map(Path::toString).toList();
-
-            result.subList(0, numberOfProfiles).forEach(
-
+            List<String> result = walk.filter(Files::isDirectory).map(Path::toString).collect(Collectors.toList());
+            int limit = numberOfProfiles;
+            if (numberOfProfiles > result.size() - 1) {
+                limit = result.size() - 1;
+            }
+            result.subList(0, limit).forEach(
                 folder -> {
-
-                    LOGGER.info(folder.toString());
+                    log.info(folder.toString());
                     File fldr = new File(folder);
                     Artist a = generateArtistProfile(fldr.getName());
                     artistRepository.save(a);
-                    LOGGER.info("Saved artist: " + a.getUserName());
+                    log.info("Saved artist: " + a.getUserName());
                     File artistProfileDir = new File(folder);
                     File[] artistProfileDirectoryListing = artistProfileDir.listFiles();
                     if (artistProfileDirectoryListing != null) {
                         for (File artworkFile : artistProfileDirectoryListing) {
                             if (artworkFile.isFile()) {
                                 Faker f = new Faker();
-                                Artwork artwork = new Artwork();
-                                String description = new Faker().rickAndMorty().quote();
+                                String description = new Faker().harryPotter().quote();
                                 if (description.length() > 50) {
                                     description = description.substring(0, 50);
                                 }
+
                                 String name = artworkFile.getName();
                                 if (name.length() > 50) {
                                     name = name.substring(0, 50);
                                 }
+
                                 List<Tag> selectedTags = new LinkedList<>();
 
                                 for (int j = 0; j < f.random().nextInt(0, 10); j++) {
-
                                     selectedTags.add(tags.get(f.random().nextInt(0, tags.size() - 1)));
                                 }
 
+                                Artwork artwork = new Artwork();
                                 artwork.setTags(selectedTags);
                                 artwork.setDescription(description);
                                 artwork.setArtist(a);
@@ -130,11 +130,11 @@ public class UserDataGenerator {
                                 artwork.setName(name);
                                 artworkRepo.save(artwork);
 
-                                LOGGER.info("Saved artwork: " + artwork.getImageUrl());
+                                log.info("Saved artwork: " + artwork.getImageUrl());
                             }
                         }
                     } else {
-                        LOGGER.info("Error saving  artwork: ");
+                        log.info("Error saving  artwork: ");
                     }
 
                 });
@@ -155,13 +155,8 @@ public class UserDataGenerator {
         artist.setReviewScore(faker.random().nextInt(0, 5));
         artist.setAddress(faker.address().fullAddress());
         artist.setEmail(faker.internet().emailAddress());
-
-        // TODO: Remove, this is just for testing purpose
-        var password = faker.internet().password(8, 15);
-        artist.setPassword(passwordEncoder.encode(password));
+        artist.setPassword(passwordEncoder.encode(faker.internet().password(8, 15)));
         artist.setUserRole(UserRole.Artist);
-
-        LOGGER.info("Username: " + username + ", Password: " + password);
         return artist;
     }
 
@@ -169,32 +164,26 @@ public class UserDataGenerator {
     private void downloadSamplePicture(int numberOfImages) throws IOException {
         // only  incr. when actually saving
         int counter = 0;
-
         while (numberOfImages > 0) {
-
-
             numberOfImages--;
-
-            LOGGER.info("Images loading..." + counter);
-
+            log.info("Images loading..." + counter);
             URL url = new URL("https://www.artstation.com/artwork/q9mA4D");
             HttpsURLConnection con = (HttpsURLConnection) url.openConnection();
             con.setRequestProperty("User-Agent", "psb");
             con.setRequestProperty("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9");
             //      con.setConnectTimeout(10000);
-
             con.connect();
             try (InputStream in = con.getInputStream()) {
                 String filename = ImageDataPaths.artistProfileLocation + String.format("/artwork%s.png", counter);
                 File file = new File(filename);
                 if (!file.exists()) {
                     Files.copy(in, Paths.get(filename));
-                    LOGGER.info("Saved Sample Image: " + filename);
+                    log.info("Saved Sample Image: " + filename);
                     counter++;
 
                 }
             } catch (IOException e) {
-                LOGGER.info(e.getMessage());
+                log.info(e.getMessage());
             }
         }
     }
